--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image/lingpay.png
+    - assets/image/redbackground.jpg
+    - assets/image/lingpayword.png
+    - assets/image/lingpay2.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
