--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ flutter:
     - assets/image/lingpayw.png
     - assets/image/warning.png
     - assets/image/qr_logo.png
+    - assets/image/qr.png
+    - assets/image/qr_logo.png
 
     - lib/icons/fund.png
     - lib/icons/history.png
