--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   smooth_page_indicator:
   curved_navigation_bar: ^1.0.6
+  url_launcher: ^6.3.0
+  simple_barcode_scanner: ^0.1.1
 
 dev_dependencies:
   flutter_test:
